@@ -1,4 +1,6 @@
 v0.6.4
+- inform user on export if vertices are not rigged to any bone
+- Bugfix: uv corrdinates are correct for meshes where triangles are removed on import
 
 v0.6.3 (17.1.2020)
 - geometry data can now be exported to xml and ini
